--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ cmake_minimum_required(VERSION 2.6)
 
 # Top level project information
 project(juicer)
-set(VERSION 1.0.0)
+set(VERSION 1.0)
 
 # Find packages
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
@@ -23,6 +23,11 @@ find_package(Tracter REQUIRED)
 find_package(Torch3 REQUIRED)
 find_package(HTK)
 find_package(JNI)
+
+# Tracter requires these, but does not put them in the static lib
+find_package(LibResample)
+find_package(RtAudio)
+find_package(SPTK)
 
 # Configure other files
 configure_file(Doxyfile.in Doxyfile)
